cdi-namespace.yaml
# this is the target namespace for vm images
apiVersion: v1
kind: Namespace
metadata:
  name: vmi
